added event images

--- a/data/en/homepage.yml
+++ b/data/en/homepage.yml
@@ -22,10 +22,10 @@ timer:
 ############################## Event ##############################
 event:
   enable : true
-  title_outline : "event"
+  title_outline : "join us"
   title : "Scale up your STEM!"
-  image_back : "images/about/stchas_ballroom.jpg"
-  image_front : "images/about/main-home-img-1.jpg"
+  image_back : "images/about/purple_beakers.jpg"
+  image_front : "images/about/equation_writing.jpg"
   content : "Lorem ipsum proin gravida nibh vel velit auctor aliquet. Aeneansollicitudin, lorem quis bibendum
               auctonisi elit consequat ipsum nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursusa sit nibh vel velit."
   button:
