Attempt fix broken expo link, add index to Content

--- a/data/en/exposition.yml
+++ b/data/en/exposition.yml
@@ -1,9 +1,29 @@
-################## about #################################
-about:
+################## exposition #################################
+exposition:
   enable : true
-  image : "images/bg/ctg.jpg"
-  title : "Inovation & **Inspiration** Connect People"
-  content : "The Event Company is an event design and production company that specializes in corporate and social events as well as non-profit fundraisers. We consider ourselves experts when it comes to event fundraising and public/media relations and offer consultation services to our clients to help make their event a sensational success."
+  #image : "images/bg/ctg.jpg"
+  title : "Information for **Sponsors**"
+  content : "The 57th Midwest/50th Great Lakes Joint Regional Meeting of the American Chemical Society will be held in St Louis, October 18-21, 2023, at the St Charles Convention Center. <br> We expect over 1,000 chemical scientists and professionals to attend. Our outstanding line-up of technical programs and networking opportunities will attract chemists from industrial, academic and government laboratories, as well as high schools, medical schools and more.  
+
+We have space for 50 exhibitors, and will share space with posters and food breaks, ensuring maximum exposure for your company. The cost will be $900 for a booth, which includes meeting registrations for two people.  A reduced price of $400 applies to academic exhibitors, but only one meeting registration is included.  Sponsorships are also available at al levels, including:
+
+* Half-day technical symposium ($500) includes signage at that symposium
+* Full-day technical symposium ($1000) includes signage at that symposium
+* Wednesday night SciMix ($2,000) provides one drink ticket per person with your logo
+* Awards Banquet Reception ($1,000) provides one drink ticket per person with your logo
+* Coffee/snack break between sessions ($750) Wednesday pm, Thursday am or pm, Friday am or pm
+* Alumni reunions
+* Minority Affairs Reception
+* In Kind Donations/Giveaways such as key cards, water bottles, pens, bags, etc. can be included in attendee welcome bags or used as door prizes 
+
+Expo locations will be assigned on a “first paid, first choice” basis.  If you want a prime location for your table, submit your payment as soon as possible. 
+
+For more information on any of these opportunities contact Lisa Balbes at lisa@balbes.com. 
+
+I look forward to working with you.  
+
+Lisa Balbes
+Expo Co-Chair, Industry"
 ################## sponsor ###############################
 sponsor:
   enable : true
