--- a/config.toml
+++ b/config.toml
@@ -55,17 +55,22 @@ link = "plugins/google-map/map.js"
   weight = 3
 
   [[menu.main]]
+  name = "St. Louis FAQ"
+  URL = "travel"
+  weight = 4
+    
+  [[menu.main]]
   name = "About"
   URL = "about"
-  weight = 4
+  weight = 7
   
   [[menu.main]]
   name = "Speakers"
   URL = "speaker"
-  weight = 5
+  weight = 8
 
   [[menu.main]]
-  weight = 6
+  weight = 9
   name = "Pages"
   hasChildren = true
 
@@ -87,7 +92,7 @@ link = "plugins/google-map/map.js"
   [[menu.main]]
   name = "Contact"
   URL = "contact"
-  weight = 5
+  weight = 10
 
 #################### default parameters ################################
 [params]
