Removed unused menu items

--- a/config.toml
+++ b/config.toml
@@ -55,24 +55,24 @@ link = "plugins/google-map/map.js"
   weight = 3
 
   [[menu.main]]
-  name = "St. Louis FAQ"
-  URL = "travel"
-  weight = 4
-    
-  [[menu.main]]
   name = "Awards"
   URL = "awards"
-  weight = 5
+  weight = 4
   
   [[menu.main]]
-  name = "About"
-  URL = "about"
-  weight = 7
+  name = "St. Louis FAQ"
+  URL = "travel"
+  weight = 5
+  
+  #[[menu.main]]
+  #name = "About"
+  #URL = "about"
+  #weight = 7
 
-  [[menu.main]]
-  weight = 9
-  name = "Pages"
-  hasChildren = true
+  #[[menu.main]]
+  #weight = 9
+  #name = "Pages"
+  #hasChildren = true
 
     #[[menu.main]]
     #parent = "Pages"
@@ -84,10 +84,10 @@ link = "plugins/google-map/map.js"
     #name = "Blog"
     #URL = "blog"
 
-    [[menu.main]]
-    parent = "Pages"
-    name = "FAQ"
-    URL = "faq"
+    #[[menu.main]]
+    #parent = "Pages"
+    #name = "FAQ"
+    #URL = "faq"
     
   [[menu.main]]
   name = "Contact"
