Slight text edits to Expo page and Homepage event

--- a/data/en/exposition.yml
+++ b/data/en/exposition.yml
@@ -32,11 +32,11 @@ Expo locations will be assigned on a “first paid, first choice” basis.  If y
 For more information on any of these opportunities contact Lisa Balbes at lisa@balbes.com. 
 
 
-I look forward to working with you.  
+We look forward to working with you.  
 
 
-Lisa Balbes
-Expo Co-Chair, Industry"
+Lisa Balbes, Expo Co-Chair, Industry
+<br> Serenity Desmond, Expo Co-Chair, Academia"
 ################## sponsor ###############################
 sponsor:
   enable : true
