--- a/data/en/homepage.yml
+++ b/data/en/homepage.yml
@@ -28,7 +28,7 @@ event:
   image_front : "images/about/equation_writing.jpg"
   content : "The 2023 Joint Midwest-Great Lakes Regional Meeting of the American Chemical Society (MWGLRM 2023) will be held Wednesday to Saturday, October 18-21, 2023, in St. Louis, Missouri. Co-hosts for this meeting are the St. Louis and East Central Illinois Sections of the ACS. The venue will be the St. Charles Convention Center.
 <br><br>
-The theme of the meeting is Scale Up Your STEM, and features a program designed to energize you to take your pursuits to the next level. MWGLRM 2023 will feature a full range of technical symposia of the latest scientific research, poster sessions highlighting student research, workshops designed by and for high school chemistry teachers, an Exposition, an Awards Banquet, and much more!"
+The theme for the meeting is “Scale Up Your STEM”, and will feature plenary speakers, exciting technical sessions and special symposia, poster sessions, regional awards, social events, and a large vendor expo.  In addition, there will be special undergraduate programming, chemistry education workshops for high school teachers, and events sponsored by the local Younger Chemists Committees and the Minority Affairs Committees. It is a great opportunity for undergraduate and graduate students to present their research and get to know the Midwest and Great Lakes chemistry communities."
   button:
     enable : true
     label : "Register & Submit Abstract"
