--- a/data/en/homepage.yml
+++ b/data/en/homepage.yml
@@ -86,70 +86,36 @@ speaker:
 sponsor:
   enable :  true
   title_outline : "Sponsors"
-  title : "Amazing Partners & Sponsors"
+  title : "for 2023"
   sponsor_group:
     ############################ sponsor group loop
-    - title : "Amazing Partners & Sponsors"
+    - title : "Flerovium Level Sponsors"
       sponsor:
         # sponcor loop
-        - logo : "images/clients/client-img-1.png"
-          link : "https://examplesite.org"
+        #- logo : "images/clients/client-img-1.png"
+          #link : "https://examplesite.org"
           
         # sponcor loop
-        - logo : "images/clients/client-img-2.png"
-          link : "#"
+        #- logo : "images/clients/client-img-2.png"
+          #link : "#"
           
         # sponcor loop
-        - logo : "images/clients/client-img-3.png"
-          link : "https://examplesite.org"
+        #- logo : "images/clients/client-img-3.png"
+          #link : "https://examplesite.org"
           
-        # sponcor loop
-        - logo : "images/clients/client-img-4.png"
-          link : "#"
-          
-        # sponcor loop
-        - logo : "images/clients/client-img-5.png"
-          link : "https://examplesite.org"
           
     ############################ sponsor group loop
-    - title : "Platinum Sponsors"
+    - title : "Platinum Level Sponsors"
       sponsor:
-        # sponcor loop
-        - logo : "images/clients/client-img-6.png"
-          link : "https://examplesite.org"
-          
-        # sponcor loop
-        - logo : "images/clients/client-img-7.png"
-          link : "#"
-          
-        # sponcor loop
-        - logo : "images/clients/client-img-8.png"
-          link : "#"
-          
-        # sponcor loop
-        - logo : "images/clients/client-img-9.png"
-          link : "https://examplesite.org"
-
-        # sponcor loop
-        - logo : "images/clients/client-img-1.png"
-          link : "#"
-          
-        # sponcor loop
-        - logo : "images/clients/client-img-2.png"
-          link : "#"
-          
-        # sponcor loop
-        - logo : "images/clients/client-img-3.png"
-          link : "#"
-          
-        # sponcor loop
-        - logo : "images/clients/client-img-4.png"
-          link : "https://examplesite.org"
-          
-        # sponcor loop
-        - logo : "images/clients/client-img-5.png"
-          link : "#"
   
+      ############################ sponsor group loop
+    - title : "Gold Level Sponsors"
+
+      ############################ sponsor group loop
+    - title : "Silver Level Sponsors"
+
+
+
   # call to action in sponsor
   sponsorship:
     enable : true
